--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Added Catalan translation by
+	Xavier Conde Rueda <xaviconde@eresmas.com>.
+
 2003-08-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Update Norwegian translation.
