--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Kees van den Broek.
+
 2003-11-27  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Added Catalan translation by
