--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-11  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-02-10  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* POTFILES.in: Added missing gdl/gdl-dock-bar.c file.
