--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-26  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Kees van den Broek.
+
 2004-02-25  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
