--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-01  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Daniel van Eeden.
+
 2004-02-28  Adam Weinberger  <adamw@FreeBSD.org>
 
 	* en_CA.po: Added Canadian English translation.
