--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-10 Alastair McKinstry <mckinstry@computer.org>
+
+	* configure.in: Added "ga" to ALL_LINGUAS.
+
 2004-03-05  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
 	* gdl/Makefile.am: Don't install gdl-dock-item-grip.h
