--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-10 Alastair McKinstry <mckinstry@computer.org>
+
+	* ga.po: Initial Irish translation.
+
 2004-03-01  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Daniel van Eeden.
