Updated Brazilian Portuguese translation done by Viviani Ap. dos Santos
2004-03-30  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

        * pt_BR.po: Updated Brazilian Portuguese translation done by
        Viviani Ap. dos Santos <vivi_olivetti@brfree.com.br>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2004-03-30  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by
+	Viviani Ap. dos Santos <vivi_olivetti@brfree.com.br>.
+
 2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
-        * hr.po: Updated Croatian translation.
+	* hr.po: Updated Croatian translation.
 
 2004-03-10 Alastair McKinstry <mckinstry@computer.org>
 
