--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  Gareth Owen  <gowen72@yahoo.com>
+
+	* configure.in: Added en_GB to ALL_LINGUAS
+
 2004-03-10 Alastair McKinstry <mckinstry@computer.org>
 
 	* configure.in: Added "ga" to ALL_LINGUAS.
