--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  Gareth Owen <gowen72@yahoo.com>
+
+	* en_GB.po: Added British English translation
+
 2004-03-30  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation done by
