Updated the Greek translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-18  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation, UTF-8 conversion by Petros Velonis.
+
 2004-04-12  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spansih translation.
