--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-01  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Translation added.
+
 2004-04-18  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation, UTF-8 conversion by Petros Velonis.
