--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-20  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-08-19  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated and revised Portuguese translation.
